@@ -2749,6 +2749,25 @@ combine_comparisons (location_t loc,
 int
 operand_equal_p (const_tree arg0, const_tree arg1, unsigned int flags)
 {
+  /* When checking, verify at the outermost operand_equal_p call that
+     if operand_equal_p returns non-zero then ARG0 and ARG1 has the same
+     hash value.  */
+  if (flag_checking && !(flags & OEP_NO_HASH_CHECK))
+    {
+      if (operand_equal_p (arg0, arg1, flags | OEP_NO_HASH_CHECK))
+	{
+	  inchash::hash hstate0 (0), hstate1 (0);
+	  inchash::add_expr (arg0, hstate0, flags);
+	  inchash::add_expr (arg1, hstate1, flags);
+	  hashval_t h0 = hstate0.end ();
+	  hashval_t h1 = hstate1.end ();
+	  gcc_assert (h0 == h1);
+	  return 1;
+	}
+      else
+	return 0;
+    }
+
   /* If either is ERROR_MARK, they aren't equal.  */
   if (TREE_CODE (arg0) == ERROR_MARK || TREE_CODE (arg1) == ERROR_MARK
       || TREE_TYPE (arg0) == error_mark_node
